...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- NAME -->
        <EditText
            android:id="@+id/sign_name"
            android:hint="Name"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="24dp"
...
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- EMAIL -->
        <EditText
            android:id="@+id/sign_email"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="24dp"

...
            app:layout_constraintTop_toBottomOf="@id/sign_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- PASSWORD -->
        <EditText
            android:id="@+id/sign_password"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="@drawable/edittext"
            android:hint="@string/login_hint2"
            android:inputType="textPassword"
            android:padding="12dp"
...
            android:layout_marginStart="24dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="24dp" />

        <!-- BUTTON -->
        <Button
            android:id="@+id/signup_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Sign Up"
            android:textSize="17sp"
            app:cornerRadius="56dp"
            app:layout_constraintTop_toBottomOf="@id/sign_phone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="24dp"
...
