<resources>
    <string name="app_name">EventLotteryApp</string>
    <string name="title1">Event Lottery</string>
    <string name="welcome_message">Welcome!</string>
    <string name="login_hint1">Email</string>
    <string name="login_hint2">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="home">Home</string>
    <string name="events">My Events</string>
    <string name="notifications">Notifications</string>
    <string name="scan">Scan</string>
...
